force-app/main/default/objects/Matrix_Order_Sync__e/Matrix_Order_Sync__e.object-meta.xml
<CustomObject>
    <description>Platform event fired when an Advertising Opportunity requires synchronization to the Matrix advertising system. Consumed by MatrixOrderSyncTrigger to make the outbound REST callout asynchronously.</description>
    <label>Matrix Order Sync</label>
    <pluralLabel>Matrix Order Syncs</pluralLabel>
</CustomObject>