force-app/main/default/objects/Matrix_Order_Sync__e/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>The sync operation to perform: CREATE, UPDATE, or CANCEL.</description>
    <label>Operation</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>