force-app/main/default/objects/Matrix_Order_Sync__e/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <description>Salesforce record ID of the Advertising_Opportunity__c to sync.</description>
    <label>Opportunity Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>