force-app/main/default/objects/Matrix_Order_Sync__e/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <description>Number of times this event has been retried. Used for circuit-breaker logic in the trigger handler.</description>
    <label>Retry Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>